# ezply

./: .gitignore  Makefile  README.md  prd.md  pyproject.toml  skills-lock.json
docs/: job-apply-automator-prd.md
frontend/src/: App.css  App.tsx
scripts/: smoke_assisted_apply.py  smoke_autofill_flow.py  smoke_resume_flow.py
src/ezply/: __init__.py  crypto.py  db.py  main.py  models.py  schemas.py  settings.py
src/ezply.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/ezply/scraping/: __init__.py  base.py  sources.py
src/ezply/services/: apply_queue.py  assisted_apply.py  autofill.py  embeddings.py  fitting.py  ingestion.py  llm.py  pipeline.py  registry.py  resume_parser.py
src/ezply/worker/: celery_app.py  tasks.py
